style(rdv): Fix flex comment overflow

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/InlineCommentEntry/InlineCommentEntry.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/InlineCommentEntry/InlineCommentEntry.module.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     gap: var(--spacer-4);
     width: 100%;
+    min-width: 0;
 }
 
 .header {
